# twoyi

./: README.md  build.gradle  gradle.properties
.github/workflows/: build.yml
app/: build.gradle
app/rs/: Cargo.toml
app/rs/loader/: Cargo.toml
app/rs/openglrenderer/: Cargo.toml
app/rs/src/: input.rs
app/src/main/: AndroidManifest.xml
app/src/main/java/io/twoyi/: Render2Activity.java  Renderer.java  TwoyiApplication.java
app/src/main/java/io/twoyi/provider/: TwoyiDocumentsProvider.java
app/src/main/java/io/twoyi/ui/: AboutActivity.java  SelectAppActivity.java
app/src/main/java/io/twoyi/utils/: NavUtils.java  UIHelper.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
