[package]
name = "twoyi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1"

[dependencies]

libc = "0.2"

once_cell = "1"

log = "0.4"
android_logger = "0.10"

ndk = "0.6"
ndk-sys = "0.3"
jni = { version = "0.19", default-features = false }

uinput-sys = "0.1"
unix_socket = "0.5"


[patch.crates-io]
uinput-sys = { git = 'https://github.com/tiann/rust-uinput-sys' }
